It downloads stuff and launches Minecraft!  Works well enough on 1.6.2. Mods don't load properly pre-1.6... :/